<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".PlayFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/tttxtreme_logo_description"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:src="@drawable/tttxtreme_logo_x" />

    <!-- TabLayout for selecting between Local and Online -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local" />
    </com.google.android.material.tabs.TabLayout>

    <!-- FragmentContainerView for loading fragments based on tab selection -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/tabFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
