<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/light_blue"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15mm"
            android:paddingVertical="12dp"
            android:src="@drawable/tttxtreme_logo_x"
            android:layout_marginVertical="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:paddingTop="24dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:id="@+id/loginText"
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/blue"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:background="@drawable/form_input"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="Username"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/form_input"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint="Password"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp"/>
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:background="@drawable/main_btn"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">
                    <include
                        layout="@layout/or_login_with"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/social_login_btn"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/googleSignInButton"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:padding="20dp"
                            android:background="@null"
                            android:src="@drawable/google_logo"
                            android:contentDescription="@string/sign_in_with_google"
                            android:scaleType="fitCenter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/social_login_btn"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/facebookSignInButton"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:padding="20dp"
                            android:background="@null"
                            android:src="@drawable/facebook_logo"
                            android:contentDescription="@string/sign_in_with_facebook"
                            android:scaleType="fitCenter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/social_login_btn"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/twitterSignInButton"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:padding="20dp"
                            android:background="@null"
                            android:src="@drawable/apple_logo"
                            android:contentDescription="@string/sign_in_with_apple"
                            android:scaleType="fitCenter" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/text_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="No account yet? Register now!"
                        android:textSize="14sp"
                        android:autoLink="none"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>